# photons_pp

./: .gitignore  Dockerfile  Justfile  README.md  consolidate.py  generate_jobs.py  histogram.py  main.py  plot.py  pyproject.toml  settings.json  util.py
results/: energy_200.csv  energy_2760.csv
