[project]
name = "photons-pp"
version = "0.1.0"
description = "Program for simulating photon spectra in proton-proton collisions."
readme = "README.md"
requires-python = ">=3.9.15"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]


[tool.ruff]
# Set the maximum line length to 79.
line-length = 92